--- a/css/style.css
+++ b/css/style.css
@@ -136,11 +136,11 @@ input[type="checkbox"].visually-hidden {
 }
 
 .site-navigation li:nth-child(4n+2) {
-    margin-right: auto;
+    margin-right: 14%;
 }
 
 .site-navigation li:nth-child(4n+3) {
-    margin-left: auto;
+    margin-left: 0;
 }
 
 .site-navigation a {
@@ -738,6 +738,7 @@ input[type="checkbox"].visually-hidden {
 .button-calendar {
     position: absolute;
     right: 7px;
+    top: 6px;
 
     width: 25px;
     height: 25px;
@@ -747,7 +748,7 @@ input[type="checkbox"].visually-hidden {
     background-color: transparent;
     background-image: url(../img/calendar.svg);
     background-repeat: no-repeat;
-    background-position: center 1px;
+    background-position: center;
     border: none;
 
     cursor: pointer;
@@ -868,7 +869,7 @@ input[type="checkbox"].visually-hidden {
 }
 
 .hotels-filter-form > fieldset {
-    min-width: 205px;
+    min-width: 204px;
     margin-right: 5%;
 }
 
