--- a/css/style.css
+++ b/css/style.css
@@ -753,7 +753,7 @@ input[type="checkbox"].visually-hidden {
 .hotel-find-button {
 	display: block;
 	min-height: 58px;
-	margin-top: auto;
+	margin-top: 26px;
 	padding: 16px 15px 15px;
 
 	font: inherit;
