--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,7 @@ input[type="checkbox"].visually-hidden {
 
 .main-footer {
 	display: flex;
+	justify-content: space-between;
 	align-items: center;
 	min-height: 120px;
 	padding: 33px 0;
@@ -297,12 +298,17 @@ input[type="checkbox"].visually-hidden {
 	padding-top: 76px;
 
 	text-align: center;
+	line-height: 0;
 
 	background-color: #737f88;
 	background-image: url("../img/background.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 50% 21%;
+}
+
+.welcome img {
+	margin-bottom: 23px;
 }
 
 .welcome::after {
@@ -313,7 +319,6 @@ input[type="checkbox"].visually-hidden {
 	display: block;
 	width: 100%;
 	min-height: 57px;
-	margin-top: 14px;
 	
 	background-image: url(../img/background-shape.png);
 	background-repeat: no-repeat;
@@ -345,11 +350,12 @@ input[type="checkbox"].visually-hidden {
 }
 
 .features-description-header {
+	margin-bottom: 27px;
+
 	font-size: 21px;
 }
 
 .features-description-body {
-	margin-top: 27px;
 	margin-bottom: 50px;
 
 	font-weight: 400;
@@ -530,18 +536,20 @@ input[type="checkbox"].visually-hidden {
 	background-color: #ffffff;
 }
 
-.offers-description-header {
+.offers-description-header,
+.offers-description-body {
 	width: 500px;
 	margin: 0 auto;
+}
+
+.offers-description-header {
+	margin-bottom: 23px;
 
 	font-size: 30px;
 	line-height: 36px;
 }
 
 .offers-description-body {
-	width: 500px;
-	margin: 0 auto;
-	margin-top: 23px;
 	margin-bottom: 46px;
 
 	font-weight: 400;
@@ -659,6 +667,10 @@ input[type="checkbox"].visually-hidden {
 	display: flex;
 	margin: 0;
 	margin-bottom: 29px;
+}
+
+.hotel-search-form div:last-of-type {
+	margin-bottom: 55px;
 }
 
 .hotel-search-form label,
@@ -814,7 +826,6 @@ input[type="checkbox"].visually-hidden {
 .hotel-find-button {
 	display: block;
 	min-height: 58px;
-	margin-top: 26px;
 	padding: 16px 15px 15px;
 
 	font: inherit;
@@ -889,6 +900,14 @@ input[type="checkbox"].visually-hidden {
 	background-repeat: no-repeat;
 	background-size: auto;
 	background-position: 50% 100%;
+}
+
+.map iframe {
+	width: 100%;
+	height: 593px;
+
+	vertical-align: bottom;
+	border: 0;
 }
 
 
