--- a/css/style.css
+++ b/css/style.css
@@ -897,10 +897,10 @@ input[type="checkbox"].visually-hidden {
 }
 
 .map iframe {
+	display: block;
 	width: 100%;
 	height: 593px;
 
-	vertical-align: bottom;
 	border: 0;
 }
 
@@ -1331,11 +1331,11 @@ input[type="checkbox"].visually-hidden {
 
 	width: 135px;
 	height: 90px;
+	margin-right: 30px;
 }
 
 .hotel-description-container {
 	width: 100%;
-	margin-left: 30px;
 }
 
 .hotel-description-container h3,
