--- a/css/style.css
+++ b/css/style.css
@@ -257,24 +257,23 @@ input[type="checkbox"].visually-hidden {
 }
 
 .footer-copyright {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
 	font-weight: 400;
 }
 
-.footer-copyright a {
-	color: #000000;
-}
-
-.footer-copyright a:hover {
-	text-decoration: underline;
+.footer-copyright span {
+	text-align: right;
 }
 
 .copyright-button {
-	display: inline-block;
-	vertical-align: middle;
+	flex-shrink: 0;
 
 	width: 115px;
 	height: 40px;
-	margin-left: 5px;
+	margin-left: 7px;
 }
 
 .copyright-button:hover path,
